fix(style): remove overflow: auto from puzzle settings menu

--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -40,7 +40,6 @@
             gap: 1em;
             padding: 1em;
             background-color: white;
-            overflow: auto;
         }
 
         .controls {
